{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 49,
  "lineage": "d10d9ca9-164f-1e90-d082-02035dbc3dc9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Web_Ned",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:026090524631:instance/i-03498500b9c489575",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03498500b9c489575",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0515ab8928c094cd5",
            "private_dns": "ip-10-0-1-6.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.6",
            "public_ip": "54.227.77.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05d4fdce35e6b7e2d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b299c5a172ab7ba",
            "tags": {
              "Name": "Web_Ned"
            },
            "tags_all": {
              "Name": "Web_Ned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00b57ea61b128aa26"
            ]
          },
          "dependencies": [
            "aws_security_group.SG_Ned",
            "aws_subnet.Subnet_Ned",
            "aws_vpc.VPC_Ned"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW_Ned",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026090524631:internet-gateway/igw-01ed14838989e5d24",
            "id": "igw-01ed14838989e5d24",
            "owner_id": "026090524631",
            "tags": {
              "Name": "IGW_Ned"
            },
            "tags_all": {
              "Name": "IGW_Ned"
            },
            "vpc_id": "vpc-0117e39018dc19067"
          },
          "dependencies": [
            "aws_vpc.VPC_Ned"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT_Ned",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026090524631:route-table/rtb-09c0aab4075e3e59e",
            "id": "rtb-09c0aab4075e3e59e",
            "owner_id": "026090524631",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01ed14838989e5d24",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT_Ned"
            },
            "tags_all": {
              "Name": "RT_Ned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0117e39018dc19067"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW_Ned",
            "aws_vpc.VPC_Ned"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTA_Ned",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037113514f2797724",
            "route_table_id": "rtb-09c0aab4075e3e59e",
            "subnet_id": "subnet-03b299c5a172ab7ba"
          },
          "dependencies": [
            "aws_internet_gateway.IGW_Ned",
            "aws_route_table.RT_Ned",
            "aws_subnet.Subnet_Ned",
            "aws_vpc.VPC_Ned"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_Ned",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026090524631:security-group/sg-00b57ea61b128aa26",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b57ea61b128aa26",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241205190140774900000001",
            "name_prefix": "terraform-",
            "owner_id": "026090524631",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG_Ned"
            },
            "tags_all": {
              "Name": "SG_Ned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0117e39018dc19067"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC_Ned"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet_Ned",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026090524631:subnet/subnet-03b299c5a172ab7ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b299c5a172ab7ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "026090524631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet_Ned"
            },
            "tags_all": {
              "Name": "Subnet_Ned"
            },
            "vpc_id": "vpc-0117e39018dc19067"
          },
          "dependencies": [
            "aws_vpc.VPC_Ned"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC_Ned",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026090524631:vpc/vpc-0117e39018dc19067",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04a2d6c4f35b07054",
            "default_route_table_id": "rtb-00517c70fc6b9e483",
            "default_security_group_id": "sg-0f07565d3f950d65c",
            "dhcp_options_id": "dopt-00a92e303b9f7be0c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0117e39018dc19067",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00517c70fc6b9e483",
            "owner_id": "026090524631",
            "tags": {
              "Name": "VPC_Ned"
            },
            "tags_all": {
              "Name": "VPC_Ned"
            }
          }
        }
      ]
    }
  ]
}